samples/_failures_safe/1761293525_d12aac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70c64bcc.c: In function ‘main’:
./samples/SAFE/__tmp_70c64bcc.c:155:27: error: expected ‘)’ at end of input
  155 |                 if (status
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_70c64bcc.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (status
      |                 ^~
./samples/SAFE/__tmp_70c64bcc.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70c64bcc.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70c64bcc.c:155:17: error: expected declaration or statement at end of input
